; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/converter/palm_usb/extr_matrix.c_rts_reset.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/converter/palm_usb/extr_matrix.c_rts_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rts_reset.firstread = internal global i64 0, align 8
@RTS_PIN = common dso_local global i32 0, align 4
@PinDirectionOutput = common dso_local global i32 0, align 4
@PinLevelHigh = common dso_local global i64 0, align 8
@PinLevelLow = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @rts_reset() #0 {
  %1 = load i32, i32* @RTS_PIN, align 4
  %2 = call i64 @digitalRead(i32 %1)
  store i64 %2, i64* @rts_reset.firstread, align 8
  %3 = load i32, i32* @RTS_PIN, align 4
  %4 = load i32, i32* @PinDirectionOutput, align 4
  %5 = call i32 @pinMode(i32 %3, i32 %4)
  %6 = load i64, i64* @rts_reset.firstread, align 8
  %7 = load i64, i64* @PinLevelHigh, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %13

9:                                                ; preds = %0
  %10 = load i32, i32* @RTS_PIN, align 4
  %11 = load i64, i64* @PinLevelLow, align 8
  %12 = call i32 @digitalWrite(i32 %10, i64 %11)
  br label %13

13:                                               ; preds = %9, %0
  %14 = call i32 @_delay_ms(i32 10)
  %15 = load i32, i32* @RTS_PIN, align 4
  %16 = load i64, i64* @PinLevelHigh, align 8
  %17 = call i32 @digitalWrite(i32 %15, i64 %16)
  %18 = call i32 @_delay_ms(i32 5)
  ret i64 1
}

declare dso_local i64 @digitalRead(i32) #1

declare dso_local i32 @pinMode(i32, i32) #1

declare dso_local i32 @digitalWrite(i32, i64) #1

declare dso_local i32 @_delay_ms(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
